--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   permission_handler: ^10.4.3
   path_provider: ^2.0.15
   file_picker: ^5.3.3
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
