--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.0.3 <4.0.0"
+# environment:
+#   sdk: '>=2.1.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -54,7 +56,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  intent:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
